--- a/RollingPaper/RollingPaper/DockController.xib
+++ b/RollingPaper/RollingPaper/DockController.xib
@@ -55,7 +55,7 @@
 						<string key="NSFrame">{{-24, 72}, {58, 62}}</string>
 						<reference key="NSSuperview" ref="603674714"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="827307220"/>
+						<reference key="NSNextKeyView" ref="34602164"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUIContentMode">1</int>
@@ -191,15 +191,15 @@
 					<object class="IBUIButton" id="34602164">
 						<reference key="NSNextResponder" ref="603674714"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{48, 58}, {21, 48}}</string>
+						<string key="NSFrame">{{47, 59}, {27, 37}}</string>
 						<reference key="NSSuperview" ref="603674714"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="827307220"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
-						<int key="IBUIButtonType">1</int>
 						<string key="IBUINormalTitle">Button</string>
 						<reference key="IBUIHighlightedTitleColor" ref="53150687"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
@@ -207,11 +207,15 @@
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="581880047"/>
+						<object class="NSCustomResource" key="IBUINormalImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">dockButton.png</string>
+						</object>
 						<reference key="IBUIFontDescription" ref="595944559"/>
 						<reference key="IBUIFont" ref="976275876"/>
 					</object>
 				</array>
-				<string key="NSFrameSize">{69, 460}</string>
+				<string key="NSFrameSize">{74, 460}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="261782342"/>
@@ -393,7 +397,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">69</int>
+			<int key="maxID">71</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -406,6 +410,7 @@
 						<string key="onTouchKeyboard:">id</string>
 						<string key="onTouchMicrophone:">id</string>
 						<string key="onTouchPencilcase:">id</string>
+						<string key="onTouchShowToggleButton:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
 						<object class="IBActionInfo" key="onTouchAlbum:">
@@ -426,6 +431,10 @@
 						</object>
 						<object class="IBActionInfo" key="onTouchPencilcase:">
 							<string key="name">onTouchPencilcase:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onTouchShowToggleButton:">
+							<string key="name">onTouchShowToggleButton:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 					</dictionary>
@@ -454,6 +463,7 @@
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="camera.png">{190, 192}</string>
 			<string key="dock.png">{100, 697}</string>
+			<string key="dockButton.png">{56, 78}</string>
 			<string key="keyboard.png">{227, 109}</string>
 			<string key="microphone.png">{254, 86}</string>
 			<string key="pencil.png">{432, 48}</string>
