--- a/RollingPaper/RollingPaper/PaperCellController.xib
+++ b/RollingPaper/RollingPaper/PaperCellController.xib
@@ -60,7 +60,7 @@
 					<object class="IBUILabel" id="275362175">
 						<reference key="NSNextResponder" ref="278927570"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{2, 0}, {245, 15}}</string>
+						<string key="NSFrame">{{6, 61}, {150, 15}}</string>
 						<reference key="NSSuperview" ref="278927570"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="21764779"/>
@@ -77,12 +77,14 @@
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription">
-							<int key="type">1</int>
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="335655973">
+							<string key="name">AppleSDGothicNeo-Medium</string>
+							<string key="family">Apple SD Gothic Neo</string>
+							<int key="traits">0</int>
 							<double key="pointSize">15</double>
 						</object>
-						<object class="NSFont" key="IBUIFont">
-							<string key="NSName">Helvetica</string>
+						<object class="NSFont" key="IBUIFont" id="207738574">
+							<string key="NSName">AppleSDGothicNeo-Medium</string>
 							<double key="NSSize">15</double>
 							<int key="NSfFlags">16</int>
 						</object>
@@ -91,7 +93,7 @@
 					<object class="IBUILabel" id="21764779">
 						<reference key="NSNextResponder" ref="278927570"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{2, 79}, {245, 12}}</string>
+						<string key="NSFrame">{{6, 77}, {150, 15}}</string>
 						<reference key="NSSuperview" ref="278927570"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -107,15 +109,8 @@
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription">
-							<int key="type">1</int>
-							<double key="pointSize">12</double>
-						</object>
-						<object class="NSFont" key="IBUIFont">
-							<string key="NSName">Helvetica</string>
-							<double key="NSSize">12</double>
-							<int key="NSfFlags">16</int>
-						</object>
+						<reference key="IBUIFontDescription" ref="335655973"/>
+						<reference key="IBUIFont" ref="207738574"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 				</array>
@@ -177,24 +172,7 @@
 						<int key="objectID">4</int>
 						<reference key="object" ref="278927570"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="21764779"/>
 							<reference ref="948787025"/>
-							<object class="IBNSLayoutConstraint" id="725121650">
-								<reference key="firstItem" ref="21764779"/>
-								<int key="firstAttribute">5</int>
-								<int key="relation">0</int>
-								<reference key="secondItem" ref="275362175"/>
-								<int key="secondAttribute">5</int>
-								<float key="multiplier">1</float>
-								<object class="IBLayoutConstant" key="constant">
-									<double key="value">0.0</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="278927570"/>
-								<int key="scoringType">6</int>
-								<float key="scoringTypeFloat">24</float>
-								<int key="contentType">2</int>
-							</object>
 							<object class="IBNSLayoutConstraint" id="629123690">
 								<reference key="firstItem" ref="21764779"/>
 								<int key="firstAttribute">6</int>
@@ -211,15 +189,31 @@
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="899895673">
+							<object class="IBNSLayoutConstraint" id="725121650">
 								<reference key="firstItem" ref="21764779"/>
-								<int key="firstAttribute">3</int>
+								<int key="firstAttribute">5</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="278927570"/>
-								<int key="secondAttribute">3</int>
+								<reference key="secondItem" ref="275362175"/>
+								<int key="secondAttribute">5</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">79</double>
+									<double key="value">0.0</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="278927570"/>
+								<int key="scoringType">6</int>
+								<float key="scoringTypeFloat">24</float>
+								<int key="contentType">2</int>
+							</object>
+							<object class="IBNSLayoutConstraint" id="119852822">
+								<reference key="firstItem" ref="278927570"/>
+								<int key="firstAttribute">4</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="21764779"/>
+								<int key="secondAttribute">4</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">4</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="278927570"/>
@@ -227,23 +221,7 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="230320851">
-								<reference key="firstItem" ref="275362175"/>
-								<int key="firstAttribute">3</int>
-								<int key="relation">0</int>
-								<reference key="secondItem" ref="278927570"/>
-								<int key="secondAttribute">3</int>
-								<float key="multiplier">1</float>
-								<object class="IBLayoutConstant" key="constant">
-									<double key="value">0.0</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="278927570"/>
-								<int key="scoringType">8</int>
-								<float key="scoringTypeFloat">29</float>
-								<int key="contentType">3</int>
-							</object>
-							<object class="IBNSLayoutConstraint" id="722265105">
+							<object class="IBNSLayoutConstraint" id="286135704">
 								<reference key="firstItem" ref="275362175"/>
 								<int key="firstAttribute">5</int>
 								<int key="relation">0</int>
@@ -251,12 +229,28 @@
 								<int key="secondAttribute">5</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">2</double>
+									<double key="value">6</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="278927570"/>
 								<int key="scoringType">3</int>
 								<float key="scoringTypeFloat">9</float>
+								<int key="contentType">3</int>
+							</object>
+							<object class="IBNSLayoutConstraint" id="516720420">
+								<reference key="firstItem" ref="278927570"/>
+								<int key="firstAttribute">4</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="275362175"/>
+								<int key="secondAttribute">4</int>
+								<float key="multiplier">1</float>
+								<object class="IBNSLayoutSymbolicConstant" key="constant">
+									<double key="value">20</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="278927570"/>
+								<int key="scoringType">8</int>
+								<float key="scoringTypeFloat">29</float>
 								<int key="contentType">3</int>
 							</object>
 							<object class="IBNSLayoutConstraint" id="880647632">
@@ -324,6 +318,7 @@
 								<int key="contentType">3</int>
 							</object>
 							<reference ref="275362175"/>
+							<reference ref="21764779"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -331,7 +326,7 @@
 						<int key="objectID">5</int>
 						<reference key="object" ref="275362175"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="500600447">
+							<object class="IBNSLayoutConstraint" id="369983405">
 								<reference key="firstItem" ref="275362175"/>
 								<int key="firstAttribute">7</int>
 								<int key="relation">0</int>
@@ -339,7 +334,7 @@
 								<int key="secondAttribute">0</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">245</double>
+									<double key="value">150</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="275362175"/>
@@ -370,7 +365,7 @@
 						<int key="objectID">6</int>
 						<reference key="object" ref="21764779"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="852641404">
+							<object class="IBNSLayoutConstraint" id="352571352">
 								<reference key="firstItem" ref="21764779"/>
 								<int key="firstAttribute">8</int>
 								<int key="relation">0</int>
@@ -378,7 +373,7 @@
 								<int key="secondAttribute">0</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">12</double>
+									<double key="value">15</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="21764779"/>
@@ -415,43 +410,43 @@
 						<reference key="parent" ref="278927570"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">18</int>
-						<reference key="object" ref="852641404"/>
-						<reference key="parent" ref="21764779"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">19</int>
 						<reference key="object" ref="297194622"/>
 						<reference key="parent" ref="275362175"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">25</int>
-						<reference key="object" ref="899895673"/>
+						<int key="objectID">62</int>
+						<reference key="object" ref="516720420"/>
 						<reference key="parent" ref="278927570"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">32</int>
-						<reference key="object" ref="500600447"/>
-						<reference key="parent" ref="275362175"/>
+						<int key="objectID">73</int>
+						<reference key="object" ref="352571352"/>
+						<reference key="parent" ref="21764779"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">35</int>
-						<reference key="object" ref="722265105"/>
+						<int key="objectID">79</int>
+						<reference key="object" ref="119852822"/>
 						<reference key="parent" ref="278927570"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">37</int>
-						<reference key="object" ref="629123690"/>
-						<reference key="parent" ref="278927570"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">38</int>
+						<int key="objectID">82</int>
 						<reference key="object" ref="725121650"/>
 						<reference key="parent" ref="278927570"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">39</int>
-						<reference key="object" ref="230320851"/>
+						<int key="objectID">85</int>
+						<reference key="object" ref="286135704"/>
+						<reference key="parent" ref="278927570"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">86</int>
+						<reference key="object" ref="369983405"/>
+						<reference key="parent" ref="275362175"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">87</int>
+						<reference key="object" ref="629123690"/>
 						<reference key="parent" ref="278927570"/>
 					</object>
 				</array>
@@ -463,47 +458,47 @@
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="10.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="19.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="25.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="32.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="35.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="37.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="38.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="39.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<array class="NSMutableArray" key="4.IBViewMetadataConstraints">
+				<array key="4.IBViewMetadataConstraints">
 					<reference ref="205266428"/>
 					<reference ref="293246233"/>
 					<reference ref="81189211"/>
 					<reference ref="880647632"/>
-					<reference ref="722265105"/>
-					<reference ref="230320851"/>
-					<reference ref="899895673"/>
-					<reference ref="629123690"/>
+					<reference ref="516720420"/>
+					<reference ref="286135704"/>
+					<reference ref="119852822"/>
 					<reference ref="725121650"/>
+					<reference ref="629123690"/>
 				</array>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<array key="5.IBViewMetadataConstraints">
+				<array class="NSMutableArray" key="5.IBViewMetadataConstraints">
 					<reference ref="297194622"/>
-					<reference ref="500600447"/>
+					<reference ref="369983405"/>
 				</array>
 				<boolean value="NO" key="5.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array class="NSMutableArray" key="6.IBViewMetadataConstraints">
-					<reference ref="852641404"/>
+					<reference ref="352571352"/>
 				</array>
 				<boolean value="NO" key="6.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
+				<string key="62.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<boolean value="NO" key="7.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
+				<string key="73.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="79.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="82.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="85.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="86.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="87.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">39</int>
+			<int key="maxID">87</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
