--- a/RollingPaper/RollingPaper/PencilcaseController.xib
+++ b/RollingPaper/RollingPaper/PencilcaseController.xib
@@ -39,14 +39,31 @@
 					<object class="IBUIView" id="356012474">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
-						<array class="NSMutableArray" key="NSSubviews"/>
-						<string key="NSFrame">{{0, 367}, {320, 50}}</string>
+						<array class="NSMutableArray" key="NSSubviews">
+							<object class="IBUIImageView" id="73092609">
+								<reference key="NSNextResponder" ref="356012474"/>
+								<int key="NSvFlags">274</int>
+								<string key="NSFrameSize">{261, 67}</string>
+								<reference key="NSSuperview" ref="356012474"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="864168657"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">colorPalleteBackground.png</string>
+								</object>
+							</object>
+						</array>
+						<string key="NSFrame">{{2, 353}, {261, 67}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSNextKeyView" ref="864168657"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="73092609"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<object class="NSColor" key="IBUIBackgroundColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MCAwLjczNzQ4MDQzODkgMQA</bytes>
+						<object class="NSColor" key="IBUIBackgroundColor" id="468943403">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MCAwAA</bytes>
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
@@ -59,6 +76,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, -5}, {320, 50}}</string>
 								<reference key="NSSuperview" ref="864168657"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="35544532"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -73,11 +91,10 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{271, 4}, {33, 33}}</string>
 								<reference key="NSSuperview" ref="864168657"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<object class="NSColor" key="IBUIBackgroundColor" id="468943403">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MCAwAA</bytes>
-								</object>
+								<reference key="IBUIBackgroundColor" ref="468943403"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -114,6 +131,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{144, 4}, {33, 33}}</string>
 								<reference key="NSSuperview" ref="864168657"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="730663943"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -139,6 +157,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{204, 4}, {33, 33}}</string>
 								<reference key="NSSuperview" ref="864168657"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="236051112"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -164,6 +183,8 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{26, 5}, {33, 33}}</string>
 								<reference key="NSSuperview" ref="864168657"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="808133839"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
@@ -184,6 +205,7 @@
 						</array>
 						<string key="NSFrame">{{0, 417}, {320, 43}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="87055157"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="468943403"/>
@@ -192,6 +214,8 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="356012474"/>
 				<reference key="IBUIBackgroundColor" ref="468943403"/>
 				<bool key="IBUIOpaque">NO</bool>
 				<bool key="IBUIAutoresizesSubviews">NO</bool>
@@ -356,7 +380,15 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">216</int>
 						<reference key="object" ref="356012474"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="73092609"/>
+						</array>
 						<reference key="parent" ref="191373211"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">219</int>
+						<reference key="object" ref="73092609"/>
+						<reference key="parent" ref="356012474"/>
 					</object>
 				</array>
 			</object>
@@ -374,15 +406,83 @@
 				<string key="212.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="216.CustomClassName">ColorPalette</string>
 				<string key="216.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="219.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="45.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">218</int>
+			<int key="maxID">219</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">ColorPalette</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ColorPalette.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">PencilcaseController</string>
+					<string key="superclassName">UIViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="onTouchClear:">id</string>
+						<string key="onTouchColor:">id</string>
+						<string key="onTouchEndPaint:">id</string>
+						<string key="onTouchRedo:">id</string>
+						<string key="onTouchUndo:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="onTouchClear:">
+							<string key="name">onTouchClear:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onTouchColor:">
+							<string key="name">onTouchColor:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onTouchEndPaint:">
+							<string key="name">onTouchEndPaint:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onTouchRedo:">
+							<string key="name">onTouchRedo:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onTouchUndo:">
+							<string key="name">onTouchUndo:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="bottomDock">UIView</string>
+						<string key="colorButton">UIButton</string>
+						<string key="colorPalette">ColorPalette</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="bottomDock">
+							<string key="name">bottomDock</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="colorButton">
+							<string key="name">colorButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="colorPalette">
+							<string key="name">colorPalette</string>
+							<string key="candidateClassName">ColorPalette</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PencilcaseController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
@@ -390,6 +490,7 @@
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="bottomBar.png">{640, 94}</string>
 			<string key="clearButton.png">{66, 66}</string>
+			<string key="colorPalleteBackground.png">{523, 134}</string>
 			<string key="okButton.png">{65, 66}</string>
 			<string key="undoButton.png">{67, 66}</string>
 		</dictionary>
