--- a/RollingPaper/RollingPaper/DockController.xib
+++ b/RollingPaper/RollingPaper/DockController.xib
@@ -39,23 +39,24 @@
 					<object class="IBUIImageView" id="698674236">
 						<reference key="NSNextResponder" ref="603674714"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{-1, 58}, {50, 348}}</string>
+						<string key="NSFrame">{{0, 38}, {52, 348}}</string>
 						<reference key="NSSuperview" ref="603674714"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="904376874"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">dock.png</string>
+							<string key="NSResourceName">tool_dock_background.png</string>
 						</object>
 					</object>
 					<object class="IBUIButton" id="261782342">
 						<reference key="NSNextResponder" ref="603674714"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{-24, 72}, {58, 62}}</string>
+						<string key="NSFrame">{{6, 170}, {33, 27}}</string>
 						<reference key="NSSuperview" ref="603674714"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="34602164"/>
+						<reference key="NSNextKeyView" ref="827307220"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUIContentMode">1</int>
@@ -76,7 +77,7 @@
 						</object>
 						<object class="NSCustomResource" key="IBUINormalImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">camera.png</string>
+							<string key="NSResourceName">camera_icon.png</string>
 						</object>
 						<object class="IBUIFontDescription" key="IBUIFontDescription" id="595944559">
 							<int key="type">2</int>
@@ -91,56 +92,7 @@
 					<object class="IBUIButton" id="827307220">
 						<reference key="NSNextResponder" ref="603674714"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{-54, 142}, {91, 62}}</string>
-						<reference key="NSSuperview" ref="603674714"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="1030624655"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<bool key="IBUIOpaque">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<int key="IBUIContentHorizontalAlignment">0</int>
-						<int key="IBUIContentVerticalAlignment">0</int>
-						<reference key="IBUIHighlightedTitleColor" ref="53150687"/>
-						<object class="NSColor" key="IBUINormalTitleColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
-						</object>
-						<reference key="IBUINormalTitleShadowColor" ref="581880047"/>
-						<object class="NSCustomResource" key="IBUINormalImage" id="799867891">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">keyboard.png</string>
-						</object>
-						<reference key="IBUINormalBackgroundImage" ref="799867891"/>
-						<reference key="IBUIFontDescription" ref="595944559"/>
-						<reference key="IBUIFont" ref="976275876"/>
-					</object>
-					<object class="IBUIButton" id="1030624655">
-						<reference key="NSNextResponder" ref="603674714"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{-54, 217}, {91, 62}}</string>
-						<reference key="NSSuperview" ref="603674714"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="904376874"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<bool key="IBUIOpaque">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<int key="IBUIContentHorizontalAlignment">0</int>
-						<int key="IBUIContentVerticalAlignment">0</int>
-						<reference key="IBUIHighlightedTitleColor" ref="53150687"/>
-						<object class="NSColor" key="IBUINormalTitleColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
-						</object>
-						<reference key="IBUINormalTitleShadowColor" ref="581880047"/>
-						<reference key="IBUINormalImage" ref="799867891"/>
-						<reference key="IBUINormalBackgroundImage" ref="799867891"/>
-						<reference key="IBUIFontDescription" ref="595944559"/>
-						<reference key="IBUIFont" ref="976275876"/>
-					</object>
-					<object class="IBUIButton" id="904376874">
-						<reference key="NSNextResponder" ref="603674714"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{-88, 287}, {125, 42}}</string>
+						<string key="NSFrame">{{7, 230}, {33, 23}}</string>
 						<reference key="NSSuperview" ref="603674714"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="928954047"/>
@@ -157,18 +109,18 @@
 						<reference key="IBUINormalTitleShadowColor" ref="581880047"/>
 						<object class="NSCustomResource" key="IBUINormalImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">pencil.png</string>
+							<string key="NSResourceName">album_icon.png</string>
 						</object>
 						<reference key="IBUIFontDescription" ref="595944559"/>
 						<reference key="IBUIFont" ref="976275876"/>
 					</object>
-					<object class="IBUIButton" id="928954047">
+					<object class="IBUIButton" id="1030624655">
 						<reference key="NSNextResponder" ref="603674714"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{-88, 332}, {125, 42}}</string>
+						<string key="NSFrame">{{11, 117}, {26, 26}}</string>
 						<reference key="NSSuperview" ref="603674714"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="698674236"/>
+						<reference key="NSNextKeyView" ref="261782342"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -180,21 +132,70 @@
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="581880047"/>
-						<object class="NSCustomResource" key="IBUINormalImage" id="1010032749">
+						<object class="NSCustomResource" key="IBUINormalImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">microphone.png</string>
+							<string key="NSResourceName">text_icon.png</string>
 						</object>
-						<reference key="IBUINormalBackgroundImage" ref="1010032749"/>
+						<reference key="IBUIFontDescription" ref="595944559"/>
+						<reference key="IBUIFont" ref="976275876"/>
+					</object>
+					<object class="IBUIButton" id="904376874">
+						<reference key="NSNextResponder" ref="603674714"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{8, 57}, {28, 30}}</string>
+						<reference key="NSSuperview" ref="603674714"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="34602164"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<reference key="IBUIHighlightedTitleColor" ref="53150687"/>
+						<object class="NSColor" key="IBUINormalTitleColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+						</object>
+						<reference key="IBUINormalTitleShadowColor" ref="581880047"/>
+						<object class="NSCustomResource" key="IBUINormalImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">pen_icon.png</string>
+						</object>
+						<reference key="IBUIFontDescription" ref="595944559"/>
+						<reference key="IBUIFont" ref="976275876"/>
+					</object>
+					<object class="IBUIButton" id="928954047">
+						<reference key="NSNextResponder" ref="603674714"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{8, 284}, {30, 30}}</string>
+						<reference key="NSSuperview" ref="603674714"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="441499149"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<reference key="IBUIHighlightedTitleColor" ref="53150687"/>
+						<object class="NSColor" key="IBUINormalTitleColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+						</object>
+						<reference key="IBUINormalTitleShadowColor" ref="581880047"/>
+						<object class="NSCustomResource" key="IBUINormalImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">mic_icon.png</string>
+						</object>
 						<reference key="IBUIFontDescription" ref="595944559"/>
 						<reference key="IBUIFont" ref="976275876"/>
 					</object>
 					<object class="IBUIButton" id="34602164">
 						<reference key="NSNextResponder" ref="603674714"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{47, 59}, {27, 37}}</string>
+						<string key="NSFrame">{{51, 38}, {27, 37}}</string>
 						<reference key="NSSuperview" ref="603674714"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="827307220"/>
+						<reference key="NSNextKeyView" ref="1030624655"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -214,11 +215,37 @@
 						<reference key="IBUIFontDescription" ref="595944559"/>
 						<reference key="IBUIFont" ref="976275876"/>
 					</object>
+					<object class="IBUIButton" id="441499149">
+						<reference key="NSNextResponder" ref="603674714"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{10, 343}, {27, 27}}</string>
+						<reference key="NSSuperview" ref="603674714"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<string key="IBUINormalTitle">Button</string>
+						<reference key="IBUIHighlightedTitleColor" ref="53150687"/>
+						<object class="NSColor" key="IBUINormalTitleColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+						</object>
+						<reference key="IBUINormalTitleShadowColor" ref="581880047"/>
+						<object class="NSCustomResource" key="IBUINormalImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">save_icon.png</string>
+						</object>
+						<reference key="IBUIFontDescription" ref="595944559"/>
+						<reference key="IBUIFont" ref="976275876"/>
+					</object>
 				</array>
-				<string key="NSFrameSize">{74, 460}</string>
+				<string key="NSFrameSize">{78, 460}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="261782342"/>
+				<reference key="NSNextKeyView" ref="698674236"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -301,6 +328,15 @@
 					</object>
 					<int key="connectionID">69</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">onTouchSave:</string>
+						<reference key="source" ref="441499149"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">73</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -327,10 +363,11 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="698674236"/>
 							<reference ref="261782342"/>
-							<reference ref="827307220"/>
-							<reference ref="1030624655"/>
 							<reference ref="904376874"/>
 							<reference ref="928954047"/>
+							<reference ref="827307220"/>
+							<reference ref="1030624655"/>
+							<reference ref="441499149"/>
 							<reference ref="34602164"/>
 						</array>
 						<reference key="parent" ref="0"/>
@@ -376,6 +413,11 @@
 						<reference key="object" ref="34602164"/>
 						<reference key="parent" ref="603674714"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">72</int>
+						<reference key="object" ref="441499149"/>
+						<reference key="parent" ref="603674714"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -390,6 +432,7 @@
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="67.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="72.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
@@ -397,7 +440,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">71</int>
+			<int key="maxID">73</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -410,6 +453,7 @@
 						<string key="onTouchKeyboard:">id</string>
 						<string key="onTouchMicrophone:">id</string>
 						<string key="onTouchPencilcase:">id</string>
+						<string key="onTouchSave:">id</string>
 						<string key="onTouchShowToggleButton:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
@@ -431,6 +475,10 @@
 						</object>
 						<object class="IBActionInfo" key="onTouchPencilcase:">
 							<string key="name">onTouchPencilcase:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="onTouchSave:">
+							<string key="name">onTouchSave:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 						<object class="IBActionInfo" key="onTouchShowToggleButton:">
@@ -461,12 +509,14 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="camera.png">{190, 192}</string>
-			<string key="dock.png">{100, 697}</string>
+			<string key="album_icon.png">{66, 46}</string>
+			<string key="camera_icon.png">{66, 54}</string>
 			<string key="dockButton.png">{56, 78}</string>
-			<string key="keyboard.png">{227, 109}</string>
-			<string key="microphone.png">{254, 86}</string>
-			<string key="pencil.png">{432, 48}</string>
+			<string key="mic_icon.png">{59, 60}</string>
+			<string key="pen_icon.png">{57, 61}</string>
+			<string key="save_icon.png">{54, 54}</string>
+			<string key="text_icon.png">{51, 51}</string>
+			<string key="tool_dock_background.png">{105, 696}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">1930</string>
 	</data>
